Fix address and lat-lng conflicts
